# Application-de-gestion

./: Makefile  README.md  config.status  projet2.glade
autom4te.cache/: requests
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  capt.txt  etudiants.txt  firascallbacks.c  firascallbacks.h  firasfonction.c  firasfonction.h  hamzacallbacks.c  hamzafonction.c  houssem_callbacks.c  houssem_callbacks.h  houssem_fonction.c  houssem_fonction.h  interface.c  interface.c.bak  interface.h  main.c  menu.txt  nada_callbacks.c  nada_callbacks.h  nada_fonction.c  nada_fonction.h  nourcallbacks.c  nourcallbacks.h  nourfonction.c  nourfonction.h  projet2  rayacallbacks.c  rayacallbacks.h  rayafonction.c  rayafonction.h  rec.txt  utilisateur.txt  utilisateur1.txt  utilisateur2.txt
src/.deps/: callbacks.Po  firascallbacks.Po  firasfonction.Po  fonction.Po  hamzacallbacks.Po  hamzafonction.Po  houssem_callbacks.Po  houssem_fonction.Po  nada_callbacks.Po  nada_fonction.Po  nourcallbacks.Po  nourfonction.Po  rayacallbacks.Po  rayafonction.Po
